[gd_scene load_steps=2 format=3 uid="uid://5grdrtlsy2oq"]

[ext_resource type="Script" uid="uid://cnf2j2ldeknhr" path="res://Assets/Scripts/MainMenu.gd" id="1_hywc3"]

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource("1_hywc3")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Button_Play" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
text = "Start"

[node name="Button_Quit" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="Control/VBoxContainer/Button_Play" to="." method="_on_button_play_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/Button_Quit" to="." method="_on_button_quit_pressed"]
